Filter Backend Fixed dates
